# kiana

./: .env.prod  .gitignore  bot.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yaml
src/plugins/: __init__.py  forward_utils.py  group_permission.py
src/plugins/a_share_sentiment/: __init__.py  ai.py  analysis.py  config.py
src/plugins/anime_trace/: README.md  __init__.py  config.py  exceptions.py
src/plugins/chat_forward/: README.md  __init__.py
src/plugins/doubili/: README.md  __init__.py  bilibili.py  config.py  douyin.py  exceptions.py  http_client.py  xiaohongshu.py
src/plugins/fund/: README.md  __init__.py  cache.py  code_identifier.py  data_fetcher.py  formatters.py  market_rules.py  queries.py  runtime.py
src/plugins/gold/: README.md  __init__.py
src/plugins/gotify/: README.md  __init__.py  config.py
src/plugins/message_archive/: __init__.py  config.py  db.py  image_store.py
src/plugins/un_nickname/: README.md  __init__.py  cache.py  config.py  db.py  handlers.py  utils.py
src/storage/: sqlite_manager.py
tests/: conftest.py  message_store_helpers.py  test_a_share_sentiment.py  test_chat_forward.py  test_fund.py  test_fund_holdings.py  test_fund_market_rules.py  test_fund_matcher.py  test_gold.py  test_image_store.py  test_message_archive.py  test_user_visible_errors.py
